fix: MR cards, unassigned user add picture, profile picture in chat, dark mode: import button, specification field, x button in pr modal

--- a/public/css/general-pages/create-pr/custom-create-pr.css
+++ b/public/css/general-pages/create-pr/custom-create-pr.css
@@ -146,3 +146,28 @@ thead.bg-transparent th {
     border-color: #dc3545;
     background-image: none;
 }
+
+/* DARK MODE OVERRIDES */
+body.dark .custom-specification-header {
+    background-color: #2a2f38 !important;
+    border: 1px solid #2a2f38 !important;
+}
+
+body.dark .specification-body {
+    background-color: #2a2f38 !important;
+    border: 1px solid #2a2f38 !important;
+    border-top: none !important;
+}
+
+body.dark .custom-specification-header:hover {
+    background-color: #2A2F38 !important;
+}
+
+body.dark .specification-body textarea {
+    background-color: transparent !important;
+    color: #bfc9d4 !important;
+}
+
+body.dark .specification-body textarea:focus {
+    color: #ffffff !important;
+}
